[tool.poetry]
name = "gabb"
version = "0.1.0"
description = "A Python wrapper around the services powering the Gabb smartwatch/smartphone."
authors = ["Ben Woods <ben@benandkristin.info>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
python-dateutil = "^2.8.2"

[tool.poetry.group.dev.dependencies]
black = ">=23.7,<25.0"
pylint = "^2.17.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
